# camera-analytics

./: .dockerignore  .env.example  .gitignore  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_NOTES.md  IMPROVEMENT_PLAN.md  INSTALL.md  ISSUES_FOUND.md  README.md  completion_summary.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  getting-started.md  index.md  mcp.md
examples/: README.md  basic_camera_setup.py  create_alert_rule.py  mcp_server_usage.py
src/camera_analytics/: __init__.py  api.py  cli.py
src/camera_analytics/config/: __init__.py  settings.py
src/camera_analytics/core/: __init__.py  alert_manager.py  analytics_engine.py  camera_manager.py  detection_engine.py  event_bus.py  onvif_discovery.py  pipeline.py  recording_manager.py  tracking_engine.py  unifi_protect.py  vlm_engine.py
src/camera_analytics/mcp_server/: __init__.py  __main__.py  server.py
src/camera_analytics/routers/: alerts.py  analytics.py  cameras.py  discovery.py  events.py  scenes.py
src/camera_analytics/utils/: __init__.py  image.py  logging.py  video.py
tests/: __init__.py  conftest.py
tests/unit/: test_alert_manager.py  test_analytics_engine.py  test_camera_manager.py  test_config.py  test_detection_engine.py  test_recording_manager.py  test_tracking_engine.py
